--- a/web/acessoBibliotecario.xhtml
+++ b/web/acessoBibliotecario.xhtml
@@ -112,8 +112,8 @@
 
     <div align="left" class="retornos" id="retornos">
         <b>
-            <font color="#{livroBean.livro.color_msg_retorno}">
-                #{livroBean.livro.msg_retorno}
+            <font color="#{c_Livro.livro.color_msg_retorno}">
+                #{c_Livro.livro.msg_retorno}
             </font>
         </b>
     </div>
@@ -132,19 +132,19 @@
                 <div class="form-group">
                     <div class="form-group">
                         <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
-                                         action="cadastrarLivro" url="cadastrarLivro.xhtml"></h:commandButton>
+                                         action="cadastrarLivro?faces-redirect=true" url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                     <div class="form-group">
                         <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                         action="consultarLivro" url="consultarLivro.xhtml"></h:commandButton>
+                                         action="consultarLivro?faces-redirect=true" url="consultarLivro.xhtml"></h:commandButton>
                     </div>
                     <div class="form-group">
                         <h:commandButton value="Alterar" class="btn btn-block btn-primary"
-                                         action="alterarLivro" url="cadastrarLivro.xhtml"></h:commandButton>
+                                         action="alterarLivro?faces-redirect=true" url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                     <div class="form-group">
                         <h:commandButton value="Deletar" class="btn btn-block btn-primary"
-                                         action="deletarLivro" url="deletarLivro.xhtml"></h:commandButton>
+                                         action="deletarLivro?faces-redirect=true" url="deletarLivro.xhtml"></h:commandButton>
                     </div>
                     <div class="form-group">
                         <p> Perfil: Bibliotecário</p>
