--- a/web/cadastrarLivro.xhtml
+++ b/web/cadastrarLivro.xhtml
@@ -86,57 +86,57 @@
                 <div class="form-group">
                     <div class="form-group">
                         <h:commandButton value="Consultar Livro" class="btn btn-block btn-primary"
-                                         action="consultarLivro"></h:commandButton>
+                                         action="consultarLivro?faces-redirect=true"></h:commandButton>
                     </div>
                     <div class="form-group">
                         <h:commandButton value="Alterar Livro" class="btn btn-block btn-primary"
-                                         action="alterarLivro"></h:commandButton>
+                                         action="alterarLivro?faces-redirect=true"></h:commandButton>
                     </div>
                     <div class="form-group">
                         <h:commandButton value="Deletar Livro" class="btn btn-block btn-primary"
-                                         action="deletarLivro"></h:commandButton>
+                                         action="deletarLivro?faces-redirect=true"></h:commandButton>
                     </div>
                 </div>
             </h:form>
             <h:form id="dadosLivro">
                 <div class="form-group">
                     <h:outputLabel value="Título"  /><font color="red">*</font>
-                    <p:inputText value="#{livroBean.livro.titulo}" class="form-control"
+                    <p:inputText value="#{c_Livro.livro.titulo}" class="form-control"
                                  required="true" placeholder="Insira o título do livro"></p:inputText>
 
 
                     <h:outputLabel value="Autor"/><font color="red">*</font>
-                    <p:inputText value="#{livroBean.livro.autor}" class="form-control"
+                    <p:inputText value="#{c_Livro.livro.autor}" class="form-control"
                                  required="true" placeholder="Insira o nome do autor"></p:inputText>
 
                     <h:outputLabel value="Editora"/><font color="red">*</font>
-                    <p:inputText value="#{livroBean.livro.editora}" class="form-control"
+                    <p:inputText value="#{c_Livro.livro.editora}" class="form-control"
                                  required="true" placeholder="Insira o nome da editora"></p:inputText>
 
                     <h:outputLabel value="Ano Lançamento"/><font color="red">*</font>
-                    <p:inputText value="#{livroBean.livro.anolancamento}" class="form-control"
+                    <p:inputText value="#{c_Livro.livro.anolancamento}" class="form-control"
                                  required="true" placeholder="Insira o ano lançamento"></p:inputText>
                 </div>
                 <div class="form-group">
                     <h:outputLabel value="Cidade"/><font color="red">*</font>
-                    <p:inputText value="#{livroBean.livro.cidade}" class="form-control"
+                    <p:inputText value="#{c_Livro.livro.cidade}" class="form-control"
                                  required="true" placeholder="Insira a cidade"></p:inputText>
 
                     <h:outputLabel value="Volume"/><font color="red">*</font>
-                    <p:inputText value="#{livroBean.livro.volume}" class="form-control"
+                    <p:inputText value="#{c_Livro.livro.volume}" class="form-control"
                                  required="true" placeholder="Insira o volume"></p:inputText>
 
                     <h:outputLabel value="Código de Catalogação"/><font color="red">*</font>
-                    <p:inputText value="#{livroBean.livro.codcatalogacao}" class="form-control"
+                    <p:inputText value="#{c_Livro.livro.codcatalogacao}" class="form-control"
                                  required="true" placeholder="Insira o código de catalogação"></p:inputText>
 
                     <h:outputLabel value="Número Chamada"/><font color="red">*</font>
-                    <p:inputText value="#{livroBean.livro.numchamada}" class="form-control"
+                    <p:inputText value="#{c_Livro.livro.numchamada}" class="form-control"
                                  required="true" placeholder="Insira o número de chamada"></p:inputText>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Cadastrar Livro" class="btn btn-block btn-primary"
-                                     action="#{livroBean.realizarCadastroLivro}"/>
+                                     action="#{c_Livro.realizarCadastroLivro}"/>
                 </div>
             </h:form>
         </div>
