--- a/web/cadastrarUsuarioBalconista.xhtml
+++ b/web/cadastrarUsuarioBalconista.xhtml
@@ -83,69 +83,69 @@
                     <h5 align="center">Controle de Usuários</h5><br/>
                     <div class="form-group">
                         <h:commandButton value="Consultar Usuário" class="btn btn-block btn-primary"
-                                         action="consultaUsuario.xhtml"/>
+                                         action="consultaUsuario?faces-redirect=true"/>
                     </div>
                     <div class="form-group">
                         <h:commandButton value="Alterar Usuário" class="btn btn-block btn-primary"
-                                         action="editarUsuario.xhtml"/>
+                                         action="editarUsuario?faces-redirect=true"/>
                     </div>
                     <div class="form-group">
                         <h:commandButton value="Deletar Usuário" class="btn btn-block btn-primary"
-                                         action="deletarUsuario.xhtml"/>
+                                         action="deletarUsuario?faces-redirect=true"/>
                     </div>
                 </div>
             </h:form>
             <h:form id="dadosUsuario">
                 <div class="form-group">
                     <h:outputLabel value="Nome Completo"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.nome}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.nome}" class="form-control"
                                  required="true" placeholder="Insira o seu nome"></p:inputText>
 
                     <h:outputLabel value="Username"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.usuario}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.usuario}" class="form-control"
                                  required="true" placeholder="Insira o username de acesso"></p:inputText>
 
                     <h:outputLabel value="Senha"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.senha}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.senha}" class="form-control"
                                  required="true" placeholder="Insira a senha de acesso"></p:inputText>
 
                     <h:outputLabel value="RG"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.rg}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.rg}" class="form-control"
                                  required="true" placeholder="Insira o seu RG(somente números)"></p:inputText>
 
                     <h:outputLabel value="CPF"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.cpf}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.cpf}" class="form-control"
                                  required="true" placeholder="Insira o seu CPF(somente números)"></p:inputText>
 
                     <h:outputLabel value="Endereço"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.endereco}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.endereco}" class="form-control"
                                  required="true"
                                  placeholder="Insira os dados do seu endereço(ex: rua, bairro, número, etc...)"></p:inputText>
 
                     <h:outputLabel value="CEP"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.cep}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.cep}" class="form-control"
                                  required="true" placeholder="Insira o CEP da sua rua(somente números)"></p:inputText>
 
                     <h:outputLabel value="Cidade"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.cidade}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.cidade}" class="form-control"
                                  required="true" placeholder="Insira a cidade onde mora"></p:inputText>
 
                     <h:outputLabel value="Estado"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.estado}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.estado}" class="form-control"
                                  required="true" placeholder="Insira o Estado onde mora"></p:inputText>
 
                     <h:outputLabel value="E-mail"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.email}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.email}" class="form-control"
                                  required="true" placeholder="Insira seu endereço de e-mail"></p:inputText>
 
                     <h:outputLabel value="Data Nascimento"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.datanasc}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.datanasc}" class="form-control"
                                  required="true" placeholder="AAAA-MM-DD"></p:inputText>
 
                     <h:outputText value="Perfil de Usuário"/><font color="red">*</font>
                     <div align="left" class="form-group">
                         <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-                            <p:selectOneButton value="#{userBean.user.permissao}" required="true">
+                            <p:selectOneButton value="#{c_Usuario.user.permissao}" required="true">
                                 <f:selectItem itemLabel="Bibliotecário" itemValue='1'/>
                                 <f:selectItem itemLabel="Balconista" itemValue='2'/>
                                 <f:selectItem itemLabel="Aluno" itemValue='3'/>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Enviar dados" class="btn btn-block btn-primary"
-                                     action="#{userBean.realizarCadastroUsuarioBalconista}"/>
+                                     action="#{c_Usuario.realizarCadastroUsuarioBalconista}"/>
                 </div>
             </h:form>
         </div>
