--- a/web/cadastroUsuario.xhtml
+++ b/web/cadastroUsuario.xhtml
@@ -86,52 +86,52 @@
             <h:form id="dadosUsuario">
                 <div class="form-group">
                     <h:outputLabel value="Nome Completo"  /><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.nome}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.nome}" class="form-control"
                                  required="true" placeholder="Insira o seu nome"></p:inputText>
 
                     <h:outputLabel value="Username"  /><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.usuario}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.usuario}" class="form-control"
                                  required="true" placeholder="Insira o username de acesso"></p:inputText>
 
                     <h:outputLabel value="Senha"  /><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.senha}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.senha}" class="form-control"
                                  required="true" placeholder="Insira a senha de acesso"></p:inputText>
 
                     <h:outputLabel value="RG"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.rg}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.rg}" class="form-control"
                                  required="true" placeholder="Insira o seu RG(somente números)"></p:inputText>
 
                     <h:outputLabel value="CPF"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.cpf}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.cpf}" class="form-control"
                                  required="true" placeholder="Insira o seu CPF(somente números)"></p:inputText>
 
                     <h:outputLabel value="Endereço"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.endereco}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.endereco}" class="form-control"
                                  required="true" placeholder="Insira os dados do seu endereço(ex: rua, bairro, número, etc...)"></p:inputText>
 
                     <h:outputLabel value="CEP"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.cep}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.cep}" class="form-control"
                                  required="true" placeholder="Insira o CEP da sua rua(somente números)"></p:inputText>
 
                     <h:outputLabel value="Cidade"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.cidade}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.cidade}" class="form-control"
                                  required="true" placeholder="Insira a cidade onde mora"></p:inputText>
 
                     <h:outputLabel value="Estado"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.estado}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.estado}" class="form-control"
                                  required="true" placeholder="Insira o Estado onde mora"></p:inputText>
 
                     <h:outputLabel value="E-mail"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.email}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.email}" class="form-control"
                                  required="true" placeholder="Insira seu endereço de e-mail"></p:inputText>
 
                     <h:outputLabel value="Data Nascimento"/><font color="red">*</font>
-                    <p:inputText value="#{userBean.user.datanasc}" class="form-control"
+                    <p:inputText value="#{c_Usuario.user.datanasc}" class="form-control"
                                  required="true" placeholder="AAAA-MM-DD"></p:inputText>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Enviar dados" class="btn btn-block btn-primary"
-                                     action="#{userBean.realizarCadastroUsuario}"/>
+                                     action="#{c_Usuario.realizarCadastroUsuario}"/>
                 </div>
             </h:form>
         </div>
