--- a/web/consultarAcervo.xhtml
+++ b/web/consultarAcervo.xhtml
@@ -91,18 +91,18 @@
             <h:form id="telaConsultaVisitante">
                 <div class="form-group">
                     <h:outputLabel value="Título"/>
-                    <p:inputText value="#{livroBean.livro.titulo}" class="form-control" required="false"
+                    <p:inputText value="#{c_Livro.livro.titulo}" class="form-control" required="false"
                                  placeholder="Insira o título do livro"></p:inputText>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                     action="#{livroBean.realizarConsultaLivro}"
+                                     action="#{c_Livro.realizarConsultaLivro}"
                                      url="javascript: tiraTabela();"/>
                 </div>
             </h:form>
             <section alig="center" class="row">
                 <div class="form-group" id="dataTable">
-                    <p:dataTable value="#{livroBean.realizarConsultaLivro()}" var="livro" border="9" rendered="true"
+                    <p:dataTable value="#{c_Livro.realizarConsultaLivro()}" var="livro" border="9" rendered="true"
                                  title="Relação de Livros.">
                         <f:facet name="header">
                             Relação de Livros
