--- a/web/deletarLivro.xhtml
+++ b/web/deletarLivro.xhtml
@@ -123,27 +123,27 @@
                 <div class="form-group">
                     <div class="form-group">
                         <h:commandButton value="Cadastrar Livro" class="btn btn-block btn-primary"
-                                         action="cadastrarLivro" url="cadastrarLivro.xhtml"></h:commandButton>
+                                         action="cadastrarLivro?faces-redirect=true" url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                     <div class="form-group">
                         <h:commandButton value="Alterar Livro" class="btn btn-block btn-primary"
-                                         action="alterarLivro" url="cadastrarLivro.xhtml"></h:commandButton>
+                                         action="alterarLivro?faces-redirect=true" url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                 </div>
             </h:form>
             <h:form id="buscarLivro">
                 <div class="form-group">
                     <h:outputLabel value="Título"/>
-                    <p:inputText value="#{livroBean.livro.titulo}" class="form-control" required="false" placeholder="Insira o título do livro"></p:inputText>
+                    <p:inputText value="#{c_Livro.livro.titulo}" class="form-control" required="false" placeholder="Insira o título do livro"></p:inputText>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Buscar Livro" class="btn btn-block btn-primary"
-                                     action="#{livroBean.realizarConsultaLivroBibliotecario}"></h:commandButton>
+                                     action="#{c_Livro.realizarConsultaLivroBibliotecario}"></h:commandButton>
                 </div>
             </h:form>
             <section alig="center" class="right">
                 <div class="form-group">
-                    <p:dataTable value="#{livroBean.realizarConsultaLivroBibliotecario()}" var="livro" border="9"
+                    <p:dataTable value="#{c_Livro.realizarConsultaLivroBibliotecario()}" var="livro" border="9"
                                  rendered="true"
                                  title="Relação de Livros.">
                         <p:column>
@@ -194,7 +194,7 @@
                     <h:form id="deletarLivro">
                         <div class="form-group">
                             <h:outputLabel value="Id do Livro"/><font color="red">*</font>
-                            <p:inputText value="#{livroBean.livro.codlivro}" class="form-control"
+                            <p:inputText value="#{c_Livro.livro.codlivro}" class="form-control"
                                          required="true" placeholder="Insira o código Id do livro"></p:inputText>
                         </div>
                         <div id="conf" class="conf">
@@ -204,7 +204,7 @@
                             <h:form>
                                 <div class="form-group">
                                     <h:commandButton value="Sim" class="btn btn-block btn-primary"
-                                                     action="#{livroBean.realizarDelecaoLivro}"/>
+                                                     action="#{c_Livro.realizarDelecaoLivro}"/>
                                 </div>
                                 <div class="form-group">
                                     <h:commandButton value="Não" class="btn btn-block btn-primary"
