--- a/web/editarUsuario.xhtml
+++ b/web/editarUsuario.xhtml
@@ -116,27 +116,27 @@
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Cadastrar Usuário" class="btn btn-block btn-primary"
-                                     action="cadastrarUsuarioBalconista.xhtml"/>
+                                     action="cadastrarUsuarioBalconista?faces-redirect=true"/>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Deletar Usuário" class="btn btn-block btn-primary"
-                                     action="deletarUsuario.xhtml"/>
+                                     action="deletarUsuario?faces-redirect=true"/>
                 </div>
             </h:form>
             <h:form id="buscarUsuário">
                 <div class="form-group">
                     <h:outputLabel value="Nome do Usuário"/>
-                    <p:inputText value="#{userBean.user.nome}" class="form-control" required="false"
+                    <p:inputText value="#{c_Usuario.user.nome}" class="form-control" required="false"
                                  placeholder="Insira o nome do usuário"></p:inputText>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Buscar" class="btn btn-block btn-primary"
-                                     action="#{userBean.realizaConsultaUsuario}"></h:commandButton>
+                                     action="#{c_Usuario.realizaConsultaUsuario}"></h:commandButton>
                 </div>
             </h:form>
 
                 <div class="form-group">
-                    <p:dataTable value="#{userBean.realizaConsultaUsuario()}" var="usuario" border="9"
+                    <p:dataTable value="#{c_Usuario.realizaConsultaUsuario()}" var="usuario" border="9"
                                  rendered="true"
                                  title="Relação de Usuários.">
 
@@ -208,62 +208,62 @@
                         <font color="red">**Inserir as informações apenas nos campos que deseja alterar**</font>
                     </p>
                     <h:form id="alterarUsuario">
-                        #{userBean.user.nome = ""}
+                        #{c_Usuario.user.nome = ""}
                         <div class="form-group">
                             <h:outputLabel value="Nome"/>
-                            <p:inputText value="#{userBean.user.nome}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.nome}" class="form-control"
                                          required="false" placeholder="Insira o nome do usuário"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="Usuário"/>
-                            <p:inputText value="#{userBean.user.usuario}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.usuario}" class="form-control"
                                          required="false" placeholder="Insira o username"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="E-Mail"/>
-                            <p:inputText value="#{userBean.user.email}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.email}" class="form-control"
                                          required="false" placeholder="Insira o novo e-mail"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="RG"/>
-                            <p:inputText value="#{userBean.user.rg}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.rg}" class="form-control"
                                          required="false" placeholder="Insira o RG(somente números)"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="CPF"/>
-                            <p:inputText value="#{userBean.user.cpf}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.cpf}" class="form-control"
                                          required="false" placeholder="Insira o CPF(somente números)"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="Endereço"/>
-                            <p:inputText value="#{userBean.user.endereco}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.endereco}" class="form-control"
                                          required="false" placeholder="Insira o novo endereço do usuário"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="CEP"/>
-                            <p:inputText value="#{userBean.user.cep}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.cep}" class="form-control"
                                          required="false" placeholder="Insira o novo CEP(somente números)"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="Cidade"/>
-                            <p:inputText value="#{userBean.user.cidade}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.cidade}" class="form-control"
                                          required="false" placeholder="Insira a nova cidade do usuário"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="Estado"/>
-                            <p:inputText value="#{userBean.user.estado}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.estado}" class="form-control"
                                          required="false" placeholder="Insira o novo estado do usuário"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="Data Nascimento"/>
-                            <p:inputText value="#{userBean.user.datanasc}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.datanasc}" class="form-control"
                                          required="false" placeholder="AAAA-MM-DD"></p:inputText>
                         </div>
 
                         <h:outputText value="Perfil de Usuário"/>
                         <div align="left" class="form-group">
                             <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-                                <p:selectOneButton value="#{userBean.user.permissao}">
+                                <p:selectOneButton value="#{c_Usuario.user.permissao}">
                                     <f:selectItem itemLabel="Bibliotecário" itemValue='1'/>
                                     <f:selectItem itemLabel="Balconista" itemValue='2'/>
                                     <f:selectItem itemLabel="Aluno" itemValue='3'/>
@@ -274,7 +274,7 @@
                         <h:outputText value="Status do Usuário"/><font color="red">*</font>
                         <div align="left" class="form-group">
                             <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-                                <p:selectOneButton value="#{userBean.user.ativo}" required="true">
+                                <p:selectOneButton value="#{c_Usuario.user.ativo}" required="true">
                                     <f:selectItem itemLabel="Ativar" itemValue='1'/>
                                     <f:selectItem itemLabel="Inativar" itemValue='0'/>
                                 </p:selectOneButton>
@@ -283,7 +283,7 @@
 
                         <div class="form-group">
                             <h:outputLabel value="Id do Usuário"/><font color="red">*</font>
-                            <p:inputText value="#{userBean.user.codusuario}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.codusuario}" class="form-control"
                                          required="true" placeholder="Insira o Id do usuário"></p:inputText>
                         </div>
                         <div class="form-group">
@@ -296,7 +296,7 @@
                                 <h:form>
                                     <div class="form-group">
                                         <h:commandButton value="Sim" class="btn btn-block btn-primary"
-                                                         action="#{userBean.realizaEdicaoUsuario}"/>
+                                                         action="#{c_Usuario.realizaEdicaoUsuario}"/>
                                     </div>
                                     <div class="form-group">
                                         <h:commandButton value="Não" class="btn btn-block btn-primary"
@@ -311,7 +311,6 @@
                         </div>
                     </h:form>
                 </div>
-
         </div>
     </section>
 </h:body>
